[gd_scene load_steps=6 format=3 uid="uid://uqxm4bsmwgrn"]

[ext_resource type="Script" path="res://src/system/marker/scenes/item.gd" id="1_2082f"]
[ext_resource type="StyleBox" uid="uid://du8td772pou5e" path="res://src/ui/theme/marker/marker_btn.tres" id="2_0g10u"]
[ext_resource type="Texture2D" uid="uid://cxggyk3vo2vvh" path="res://resource/img/ico/echo/101.png" id="2_jf4md"]
[ext_resource type="Theme" uid="uid://dxxdb2o2qn4i3" path="res://src/ui/theme/marker/marker_panel.tres" id="4_y3ui6"]
[ext_resource type="Texture2D" uid="uid://dc5skbjb8g338" path="res://resource/img/bg/loading_bg1.png" id="5_gttoc"]

[node name="Item" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_2082f")

[node name="BtnItem" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("2_0g10u")
theme_override_styles/hover = ExtResource("2_0g10u")
theme_override_styles/pressed = ExtResource("2_0g10u")
icon = ExtResource("2_jf4md")
icon_alignment = 1
expand_icon = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = -30.0
offset_right = 450.0
offset_bottom = 370.0
theme = ExtResource("4_y3ui6")

[node name="InfoBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 332.0

[node name="Type" type="HBoxContainer" parent="Panel/InfoBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LblType" type="Label" parent="Panel/InfoBox/Type"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666569, 0.666569, 0.666569, 1)
text = "{maker_type}"

[node name="Type" type="Label" parent="Panel/InfoBox/Type"]
layout_mode = 2

[node name="Category" type="HBoxContainer" parent="Panel/InfoBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LblCategory" type="Label" parent="Panel/InfoBox/Category"]
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
text = "{maker_category}"

[node name="Category" type="Label" parent="Panel/InfoBox/Category"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/InfoBox"]
layout_mode = 2
texture = ExtResource("5_gttoc")
expand_mode = 5

[node name="Text" type="RichTextLabel" parent="Panel/InfoBox"]
layout_mode = 2
fit_content = true

[node name="Id" type="HBoxContainer" parent="Panel/InfoBox"]
modulate = Color(0.332881, 0.332881, 0.33288, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
alignment = 2

[node name="LblId" type="Label" parent="Panel/InfoBox/Id"]
layout_mode = 2
text = "{maker_id}"

[node name="Id" type="Label" parent="Panel/InfoBox/Id"]
layout_mode = 2

[node name="BtnClose" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -35.0
offset_top = 5.0
offset_right = -11.0
offset_bottom = 36.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
text = "â¨‰"
flat = true

[connection signal="pressed" from="BtnItem" to="." method="_on_btn_item_pressed"]
[connection signal="resized" from="Panel/InfoBox" to="." method="_on_info_box_resized"]
[connection signal="pressed" from="Panel/BtnClose" to="." method="_on_btn_close_info_pressed"]
